cabal-version: 2.2
name:           kore-match-disjunction
version:        0.60.0.0
description:    Please see the [README](README.md) file.
category:       Language
homepage:       https://github.com/runtimeverification/haskell-backend#readme
bug-reports:    https://github.com/runtimeverification/haskell-backend/issues
author:         Runtime Verification Inc
maintainer:     ana.pantilie@runtimeverification.com
copyright:      2018-2021 Runtime Verification Inc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/runtimeverification/haskell-backend

flag release
  description: Build a faster runtime, at the expense of a slower build.
  manual: True
  default: False

flag threaded
  description: Use the threaded runtime. Recommended to disable for profiling.
  manual: True
  default: True

common haskell
  -- Common Haskell dialect
  default-extensions:
    BangPatterns
    -- GHC2021 prep
    BinaryLiterals
    -- end
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    -- GHC2021 prep
    DeriveLift
    -- end
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    -- GHC2021 prep
    EmptyDataDeriving
    -- end
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    -- GHC2021 prep
    HexFloatLiterals
    -- end
    InstanceSigs
    -- GHC2021 prep
    ImportQualifiedPost
    -- end
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    -- GHC2021 prep
    NamedWildCards
    NumericUnderscores
    -- end
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    -- GHC2021 prep
    PolyKinds
    PostfixOperators
    -- end
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    -- GHC2021 prep
    StandaloneKindSignatures
    -- end
    Strict
    -- GHC2021 prep
    TupleSections
    -- end
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  build-depends: base >=4.7
  ghc-options:
    -fno-ignore-asserts
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -Wmissing-deriving-strategies
  ghc-options:
    -j6
  ghc-options:
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -fwrite-ide-info -hiedir=.hie

common exe
  -- Common options for all executables
  if flag(threaded)
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T -A32M -qn4"
  else
    ghc-options: -rtsopts "-with-rtsopts=-A32M -T"

common global-main
  -- Common options for all executables that depend on GlobalMain
  build-depends: kore
  build-depends: binary >=0.8.8.0
  build-depends: bytestring >=0.10
  build-depends: clock >=0.8
  build-depends: compact >= 0.2.0.0
  build-depends: containers >=0.5
  build-depends: deepseq >=1.4
  build-depends: directory >=1.3
  build-depends: exceptions >=0.10
  build-depends: filepath >=1.4
  build-depends: generic-lens >=1.1
  build-depends: lens >=4.17
  build-depends: megaparsec >=7.0
  build-depends: optparse-applicative >=0.14
  build-depends: text >=1.2
  build-depends: time >=1.9.3

executable kore-match-disjunction
  import: haskell
  import: exe
  import: global-main
  main-is: Main.hs
  hs-source-dirs: .
  build-depends: transformers >= 0.5
